# vlm_structured

./: .gitignore  README.md  pyproject.toml
vlm/: config.py
vlm/configs/: experiments.py  paths.py  schema.py  training_configs.py  training_schema.py
vlm/data/: collator.py  dataset.py  dataset_inspect.py  dataset_verification.py  temp.py
vlm/evaluation/: evaluate.py  visual_compare.py
vlm/models/: language_model.py  model_checks.py  projector.py  receipt_vlm.py  resampler.py  vision_encoder.py
vlm/notebooks/: walkthrough.py
vlm/scripts/: check_encoder.py  compare_sft.py  donut_analysis.py  evaluate.py  evaluate_rl.py  evaluate_sft.py  max_token_check.py  train_rl.py  train_sft.py
vlm/tests/models/: test_pojector.py  test_vision_encoder.py
vlm/training/: common.py  generate.py  rewards.py  rl.py  rl_simple.py  rl_utils.py  sft.py
vlm/utils/: device.py  hf_login.py  json_extractor.py  training.py
