[project]
name = "vlm"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "trl>=0.9.0",
    "huggingface-hub>=0.24.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "tensorboard>=2.17.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "rich>=13.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
    "pyrefly>=0.40.0",
    "pyre-check>=0.9.25"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vlm"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["vlm"]

exclude = ["exploration"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "UP",   # modern Python syntax
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyre]
source_directories = ["vlm"]
search_path = [".venv/lib/python3.12/site-packages",
"../vlm",]
ignore_all_errors = ["vlm/exploration"]
python_version = "3.12"


[tool.pyrefly]
project-includes = ["vlm"]
project-excludes = [
    "exploration",
]
python-version = "3.12"

